# eurekaclient

./: .gitignore  Dockerfile  DockerfileWeb  README.md  client.py  client_with_metrics.py  eureka_client_lib.py  eureka_server.json  metrics_exporter.py  models.py  pyproject.toml  requirements.txt  services.json  webserver.py
.github/workflows/: docker-publish-web.yml  docker-publish.yml  dockerpublishmanual.yml  maven.yml
accesslogs/: readme.md  server.py
eurekaclientjava/: Dockerfile  README.md  application.properties  pom.xml  services.json
eurekaclientjava/eurekaclient-chart/: values.yaml
eurekaclientjava/eurekaclient-chart/templates/: configmap.yaml  deployment.yaml
eurekaclientjava/src/main/java/com/example/eurekaclient/: Application.java  EurekaclientApplication.java
eurekaclientjava/src/main/java/com/example/eurekaclient/actuator/: EurekaClientsInfoContributor.java
eurekaclientjava/src/main/java/com/example/eurekaclient/services/: EurekaClientService.java  LifecycleManager.java  ServiceInstance.java  ServiceInstanceRepository.java  ServiceInstanceStore.java  StartupService.java
eurekaclientjava/src/main/java/com/example/eurekaclient/web/: ClientViewController.java
eurekaclientjava/src/main/resources/: application.properties
eurekaclientjava/src/main/resources/templates/: clients.html
example/: readme.md
static/: index.html  main.js  style.css
tests/: test_accesslogs_server.py  test_eureka_client_lib.py
