[project]
name = "eurekaclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[tool.pyright]
extraPaths = ["accesslogs"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
